# eac

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
goeac/: .gitignore  go.mod  main.go
local-calculator/: Cargo.toml
local-calculator/configuration/: config.yaml
local-calculator/src/: configuration.rs  main.rs
